--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,105 +60,83 @@
 
 <!-- Início do fundo branco -->
 <div class="bg-branco px-5">
-  <div class="container col-md-11">
 
 
 
 
-    <!-- Linhas de pesquisa -->
-    <h2 class="text-center mb-5 pb-5" id="linhasPesquisa">Linhas de pesquisa</h2>
-    <div class="row justify-content-between">
+  <!-- Linhas de pesquisa -->
+  <h2 class="text-center mb-5 pb-5" id="linhasPesquisa">Linhas de pesquisa</h2>
+  
+
+  <div class="d-flex justify-content-center">
+  <div class="container col-md-11 row m-0">
 
 
-      <!-- Card esquerda -->
-      <div class="row m-4">
-        <div class="bordacard">⠀
-        </div>
-        <div class="card">
-          <h3>Livros escolares, métodos e práticas de ensino</h3>
-          <p class="mt-3">Desenvolver investigações sobre história do livro e das edições didáticas; Problematização
-            sobre a história dos
-            métodos de ensino; Análise das práticas de escolarização e de letramento escolar; Compreensão dos diferentes
-            aspectos envolvidos na constituição e nos modos de circulação e utilização dos livros didáticos como gênero
-            específico.</p>
-        </div>
-      </div>
-      <!-- Fim do card esquerda -->
+<!-- Card esquerda -->
+<div class="col-md-6">
+  <div class="card bdl my-5 mx-2">
+    <h3>Livros escolares, métodos e práticas de ensino</h3>
+    <p class="mt-3">Desenvolver investigações sobre história do livro e das edições didáticas; Problematização
+      sobre a história dos
+      métodos de ensino; Análise das práticas de escolarização e de letramento escolar; Compreensão dos diferentes
+      aspectos envolvidos na constituição e nos modos de circulação e utilização dos livros didáticos como gênero
+      específico.</p>
+  </div>
+
+  <div class="card bdl my-5 mx-2">
+    <h3>Literatura Infantil e Juvenil</h3>
+    <p class="mt-3">Investigar aspectos relacionados à produção e à recepção de obras literárias destinas à
+      infância e juventude; Contribuir para a formulação de teorias específicas para a literatura infantil e
+      juvenil; Produzir uma crítica específica das obras literárias infantis e juvenis; Problematizar aspectos da
+      história da literatura infantil brasileira e as características dessa produção, no presente; Compreender as
+      relações entre literatura infantil e juvenil, ensino, escolarização e formação de leitores.</p>
+  </div>
+
+  <div class="card bdl my-5 mx-2">
+    <h3>Alfabetização, Leitura e Escrita</h3>
+    <p class="mt-3">Desenvolver estudos e pesquisas relacionadas ao ensino e à aprendizagem inicial da leitura e
+      da escrita; compreender aspectos da história da alfabetização no Brasil e da constituição desse campo de
+      ensino e pesquisa; investigar a produção de materiais didáticos destinados ao ensino inicial de leitura e
+      escrita e a circulação de modelos, saberes e práticas relacionados a esse ensino.</p>
+  </div>
+</div>
+<!-- Fim do card esquerda -->
 
 
-      <!-- Card direita -->
-      <div class="row m-4">
-        <div class="cardr text-right">
-          <h3>Livros escolares, métodos e práticas de ensino</h3>
-          <p class="mt-3">Desenvolver investigações sobre história do livro e das edições didáticas; Problematização
-            sobre a história dos
-            métodos de ensino; Análise das práticas de escolarização e de letramento escolar; Compreensão dos diferentes
-            aspectos envolvidos na constituição e nos modos de circulação e utilização dos livros didáticos como gênero
-            específico.</p>
-        </div>
-        <div class="bordacardr">⠀
-        </div>
-      </div>
-      <!-- Fim do card direita -->
 
 
-    </div>
-    <div class="row justify-content-between">
+  <!-- Card direita -->
+  <div class="col-md-6">
+  <div class="card bdr text-right my-5 mx-2">
+    <h3>Livros escolares, métodos e práticas de ensino</h3>
+    <p class="mt-3">Desenvolver investigações sobre história do livro e das edições didáticas; Problematização
+      sobre a história dos
+      métodos de ensino; Análise das práticas de escolarização e de letramento escolar; Compreensão dos diferentes
+      aspectos envolvidos na constituição e nos modos de circulação e utilização dos livros didáticos como gênero
+      específico.</p>
+  </div>
+
+  <div class="card bdr text-right my-5 mx-2">
+    <h3>Literatura, Escolarização e Formação de Leitores</h3>
+    <p class="mt-3">Compreender as relações escolares entre literatura e ensino (letramento literário/ educação
+      literária); Compreender processos não escolares de formação de leitores e promoção da leitura literária;
+      Problematizar a produção de materiais didáticos destinados ao ensino de literatura; Analisar políticas
+      públicas de incentivo à leitura e de acesso ao texto literário; Investigar os processos históricos de
+      implantação da literatura como objeto de conhecimento escolar e como disciplina/matéria de ensino.</p>
+  </div>
+
+</div>
 
 
-      <!-- Card esquerda -->
-      <div class="row m-4">
-        <div class="bordacard">⠀
-        </div>
-        <div class="card">
-          <h3>Literatura Infantil e Juvenil</h3>
-          <p class="mt-3">Investigar aspectos relacionados à produção e à recepção de obras literárias destinas à
-            infância e juventude; Contribuir para a formulação de teorias específicas para a literatura infantil e
-            juvenil; Produzir uma crítica específica das obras literárias infantis e juvenis; Problematizar aspectos da
-            história da literatura infantil brasileira e as características dessa produção, no presente; Compreender as
-            relações entre literatura infantil e juvenil, ensino, escolarização e formação de leitores.</p>
-        </div>
-      </div>
-      <!-- Fim do card esquerda -->
+  </div>
 
 
-      <!-- Card direita -->
-      <div class="row m-4">
-        <div class="cardr text-right">
-          <h3>Literatura, Escolarização e Formação de Leitores</h3>
-          <p class="mt-3">Compreender as relações escolares entre literatura e ensino (letramento literário/ educação
-            literária); Compreender processos não escolares de formação de leitores e promoção da leitura literária;
-            Problematizar a produção de materiais didáticos destinados ao ensino de literatura; Analisar políticas
-            públicas de incentivo à leitura e de acesso ao texto literário; Investigar os processos históricos de
-            implantação da literatura como objeto de conhecimento escolar e como disciplina/matéria de ensino.</p>
-        </div>
-        <div class="bordacardr">⠀
-        </div>
-      </div>
-      <!-- Fim do card direita -->
+
+      
+    <!-- Fim do card direita -->
 
 
-    </div>
-    <div class="row justify-content-between">
-
-
-      <!-- Card esquerda -->
-      <div class="row m-4">
-        <div class="bordacard">⠀
-        </div>
-        <div class="card">
-          <h3>Alfabetização, Leitura e Escrita</h3>
-          <p class="mt-3">Desenvolver estudos e pesquisas relacionadas ao ensino e à aprendizagem inicial da leitura e
-            da escrita; compreender aspectos da história da alfabetização no Brasil e da constituição desse campo de
-            ensino e pesquisa; investigar a produção de materiais didáticos destinados ao ensino inicial de leitura e
-            escrita e a circulação de modelos, saberes e práticas relacionados a esse ensino.</p>
-        </div>
-      </div>
-      <!-- Fim do card esquerda -->
-
-
-    </div>
-
+    
 
   </div>
 </div>
@@ -235,12 +213,12 @@
     <!-- Fim de Cláudia -->
 
 
-<!-- Fim de sobre os coordenadores -->
+    <!-- Fim de sobre os coordenadores -->
 
 
 
 
-</div>
+  </div>
 </div>
 <!-- Fim do fundo azul claro -->
 
