--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,16 +65,16 @@
 
 
   <!-- Linhas de pesquisa -->
-  <h2 class="text-center mb-5 pb-5" id="linhasPesquisa">Linhas de pesquisa</h2>
+  <h2 class="text-center mb-3" id="linhasPesquisa">Linhas de pesquisa</h2>
   
 
   <div class="d-flex justify-content-center">
-  <div class="container col-md-11 row m-0">
+  <div class="row">
 
 
 <!-- Card esquerda -->
-<div class="col-md-6">
-  <div class="card bdl my-5 mx-2">
+<div>
+  <div class="card bdl">
     <h3>Livros escolares, métodos e práticas de ensino</h3>
     <p class="mt-3">Desenvolver investigações sobre história do livro e das edições didáticas; Problematização
       sobre a história dos
@@ -83,7 +83,7 @@
       específico.</p>
   </div>
 
-  <div class="card bdl my-5 mx-2">
+  <div class="card bdl">
     <h3>Literatura Infantil e Juvenil</h3>
     <p class="mt-3">Investigar aspectos relacionados à produção e à recepção de obras literárias destinas à
       infância e juventude; Contribuir para a formulação de teorias específicas para a literatura infantil e
@@ -92,7 +92,7 @@
       relações entre literatura infantil e juvenil, ensino, escolarização e formação de leitores.</p>
   </div>
 
-  <div class="card bdl my-5 mx-2">
+  <div class="card bdl">
     <h3>Alfabetização, Leitura e Escrita</h3>
     <p class="mt-3">Desenvolver estudos e pesquisas relacionadas ao ensino e à aprendizagem inicial da leitura e
       da escrita; compreender aspectos da história da alfabetização no Brasil e da constituição desse campo de
@@ -106,8 +106,8 @@
 
 
   <!-- Card direita -->
-  <div class="col-md-6">
-  <div class="card bdr text-right my-5 mx-2">
+  <div>
+  <div class="card bdr">
     <h3>Livros escolares, métodos e práticas de ensino</h3>
     <p class="mt-3">Desenvolver investigações sobre história do livro e das edições didáticas; Problematização
       sobre a história dos
@@ -116,7 +116,7 @@
       específico.</p>
   </div>
 
-  <div class="card bdr text-right my-5 mx-2">
+  <div class="card bdr text-right">
     <h3>Literatura, Escolarização e Formação de Leitores</h3>
     <p class="mt-3">Compreender as relações escolares entre literatura e ensino (letramento literário/ educação
       literária); Compreender processos não escolares de formação de leitores e promoção da leitura literária;
@@ -163,7 +163,7 @@
 
 <!-- Fundo azul claro -->
 <div class="bg-azulclaro">
-  <div class="container col-md-10 pt-5">
+  <div class="container pt-5">
 
 
 
@@ -172,7 +172,7 @@
 
 
     <!-- Fernando -->
-    <div class="row aligntop mb-5 py-5">
+    <div class="row aligntop mb-5 py-5 fernando">
       <img src="https://imgur.com/M41q9p7.png" alt="Fernando" class="mr-5 fotoequipe">
       <div class="cardequipe">
         <h4>Fernando Rodrigues de Oliveira</h4>
@@ -182,11 +182,11 @@
           Educação pela Faculdade de Filosofia e Ciências (FFC), Universidade Estadual Paulista (UNESP), campus de
           Marília, com estágio de Doutorado Sanduíche (bolsa PDSE-CAPES) junto ao Instituto de Educação da Universidade
           de Lisboa, Portugal; Mestre em Educação pela FFC-UNESP-Marília (2010); graduado em Pedagogia pela
-          FFC-UNESP-Marília (2009); graduado em Letras pela Faculdade da Alta Paulista (2006). Líder do NIPELL - Núcleo
+          FFC-UNESP-Marília (2009); graduado em Letras pela Faculdade da Alta Paulista (2006). <span id="sobrefernando">Líder do NIPELL - Núcleo
           Interdisciplinar de Pesquisas sobre Ensino de Língua e Literatura. Atua, principalmente, com pesquisas de
           abordagem histórica sobre: Literatura infantil e juvenil; Ensino de Língua Portuguesa; Ensino de Literatura;
           Alfabetização, Leitura e Escrita; Currículo e Disciplinas Escolares; Livro, Edições e Métodos e Técnicas de
-          Ensino.</p>
+          Ensino.</span></p>
         <a href="http://lattes.cnpq.br/7112621592674917" class="m-0 p-0 lattes">Lattes</a>
       </div>
     </div>
@@ -194,7 +194,7 @@
 
 
     <!-- Cláudia -->
-    <div class="row aligntop d-flex justify-content-end pt-5 mt-5">
+    <div class="row aligntop pt-5 mt-5 claudia">
       <img src="https://imgur.com/eiam51e.png" alt="Fernando" class="mr-5 fotoequipe">
       <div class="cardequipe">
         <h4>Claudia Lemos Vóvio</h4>
@@ -339,7 +339,7 @@
 
 
     <!-- Barra de navegação -->
-    <div class="row d-flex justify-content-between mb-5 px-4">
+    <div class="row d-flex justify-content-between mb-2 px-4">
       <div class="row aligntop">
         <img src="https://imgur.com/H7bFPjb.png" alt="NIPELL" class="logoft">
       </div>
@@ -354,14 +354,16 @@
 
 
     <!-- Redes sociais -->
-    <div class="col-md-1 no-gutters mx-0 px-0 pb-5">
+    <div class="col-md-1 mx-0 px-0 pb-2">
       <p class="p-0 m-0"><a href="https://www.instagram.com/nipell.unifesp/" class="redessociaistext"><i
             class="fa fa-instagram text-branco" aria-hidden="true"></i>⠀Instagram</a></p>
       <p><a href="https://www.youtube.com/c/NipellUnifesp" class="redessociaistext"><i
             class="fa fa-youtube-play text-branco" aria-hidden="true"></i>⠀Youtube</a></p>
     </div>
+    
     <!-- Fim das redes sociais -->
 
+    <p class="text-right my-0 py-3 text-center text-white copy">Todos os direitos reservados &copy; 2022</p>
 
     <!-- Fim do footer -->
 
