--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -168,16 +168,20 @@ legend{
     font-size: 1.2rem;
 }
 
+.fa:hover{
+    color: #bcc0df;
+}
+
 
 .redessociaistext{
     font-size: 0.87rem;
-    color: #000540;
+    color: #E5E8FF;
     font-family: Lato;
     text-decoration: none;
 }
 
 .redessociaistext:hover{
-    color: #161f86;
+    color: #bcc0df;
 }
 
 .yt{
